# BROski-BOT-3.0

./: .coverage  .gitignore  Create_Desktop_Shortcut.vbs  MAIN_FILES.md  README.md  backtest_signals.py  backup_dashboard.py  bot_monitor_enhanced.py  bot_monitor_enhanced.py.bak  broski_controller.py  broski_dashboard.py  broski_dashboard.py.bak  broski_ultra_hub.py  check_results.py.bak  check_system.py  check_system.py.bak  clear_emergency.py  config.backup_20250310_121517.json  config.example.json  config.json  config_template.json  create_structure.py  dashboard_fix.py.bak  dependency_usage_report.txt  direct_trader.py  easy_setup.py  easy_update.py  emergency_kill.py  file_manifest.html  fix_brain_hub.py  fix_dashboard.py  fix_encoding.py  fix_pip_permissions.py  fix_streamlit.py  fix_telegram.py  github_setup_guide.md  hyperfocus_v2.py  hyperfocus_v2.py.bak  implementation_plan.json  improved_rsi_strategy.py  (+49 more)
